--- a/public/assets/css/colors/green-style.css
+++ b/public/assets/css/colors/green-style.css
@@ -10,7 +10,7 @@
     color: #fff;
 }
 
-.lienEtudiant {
+.lienEtudiant .lienEtudian .lienEtudia .lienEtudi .lienEtud .lienEtu {
     text-align: center;
 }
 
